--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,7 @@
 <% content_for :head do %>
   <%= stylesheet_link_tag 'reviews.css' %>
 <% end %>
-<h1>Product review submission</h1>
+<h1><%= t(:product_review_submission) %></h1>
 
 <h2> <%= t('leave_us_a_review') + ' "' + @product.name + '"' %> </h2>
 
@@ -12,7 +12,7 @@
     <table cellspacing="0" cellpadding="2">
 	<tbody><tr valign="top">
 	    <td class="fieldtitle right nowrap">
-		<%= f.label :name, "<strong>Your name</strong>" %>
+		<%= f.label :name, "<strong>#{t(:review_your_name)}</strong>" %>
 	    </td>
 	    <td width="100%">
               <%= f.text_field :name, :size => 50, :maxlength => 100 %>
@@ -20,7 +20,7 @@
 	</tr>
 	<tr valign="top">
 	    <td class="fieldtitle right nowrap">
-		<%= f.label :location, "<strong>Your location</strong>" %>
+		<%= f.label :location, "<strong>#{t(:review_your_location)}</strong>" %>
 	    </td>
 	    <td>
               <%= f.text_field :location, :size => 50, :maxlength => 100 %>
@@ -28,7 +28,7 @@
 	</tr>
 	<tr valign="top">
 	    <td style="padding-top: 5px; padding-bottom: 5px;" class="fieldtitle right nowrap">
-		<strong>Rating</strong>
+		<strong><%= t(:review_rating) %></strong>
 	    </td>
 	    <td style="padding-top: 5px; padding-bottom: 5px;">
               <%= render :partial => "reviews/stars", :locals => {:stars => @review.rating, :edit_enabled => true} %>
@@ -36,7 +36,7 @@
 	</tr>
 	<tr valign="top">
 	    <td class="fieldtitle right nowrap">
-		<%= f.label :title, "<strong>Review title</strong>" %>
+		<%= f.label :title, "<strong>#{t(:review_title)}</strong>" %>
 	    </td>
 	    <td>
             <%= f.text_field :title, :maxlength => "255", :size => "50" %>
@@ -44,7 +44,7 @@
 	</tr>
 	<tr valign="top">
 	    <td class="fieldtitle right nowrap">
-		<%= f.label :review, "<strong>Review text</strong>" %>
+		<%= f.label :review, "<strong>#{t(:review_text)}</strong>" %>
 	    </td>
 	    <td>
 		<%= f.text_area :review, :wrap => "virtual", :rows => "10", :cols => "50" %>
@@ -53,7 +53,7 @@
 	<tr>
 	    <td> </td>
 	    <td style="padding-top: 5px;">
-		<%= f.submit "Submit your review", :class => "button bg_darkfirst" %>
+		<%= f.submit t(:review_submit), :class => "button bg_darkfirst" %>
 	    </td>
 	</tr>
     </tbody></table>
