--- a/app/views/reviews/_stars.html.erb
+++ b/app/views/reviews/_stars.html.erb
@@ -13,7 +13,7 @@
 <% for i in 1..Rating.get_nb_stars %>
   <input name="<%= name %>" 
          type="radio" class="star" 
-         value="<%= pluralize(i, 'star') %>" <%= state %> 
+         value="<%= i %>" <%= state %> 
          <%= "checked=\"checked\"" if i==stars  %> />
 <% end %>
 
