--- a/app/views/shared/_review.html.erb
+++ b/app/views/shared/_review.html.erb
@@ -4,7 +4,7 @@
   </span>
   &nbsp; <span class="title"><%=h review.title%> </span>
   <br/>
-  <span class="attribution">By <strong><%=h review.name%></strong> from <strong><%=h review.location%></strong> on <strong><%=review.created_at.strftime("%d/%m/%Y") %></strong></span>
+  <span class="attribution"><%= t(:review_by) %> <strong><%=h review.name%></strong> <%= t(:review_from) %> <strong><%=h review.location%></strong> <%= t(:review_on) %> <strong><%=review.created_at.strftime("%d/%m/%Y") %></strong></span>
   <p>
   <%=h review.review%>
   </p>
